src/objects/TrainingWorkItem__c.object
<CustomObject>
    <fields>
        <fullName>DeliveryHours__c</fullName>
        <label>Delivery Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreparationHours__c</fullName>
        <label>Preparation Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrainingCost__c</fullName>
        <label>Training Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <label>Work Order</label>
        <referenceTo>WorkOrder__c</referenceTo>
        <relationshipLabel>Training Work Items</relationshipLabel>
        <relationshipName>TrainingWorkItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Training Work Item</label>
    <nameField>
        <label>Testing Work Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Work Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>